--- a/notFound4.html
+++ b/notFound4.html
@@ -44,12 +44,12 @@
     <!-- ====== Banner End ====== -->
 
     <!-- ====== Error 404 Start ====== -->
-    <section class="ud-404">
+    <section>
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
+          <div">
             <div class="ud-404-wrapper">
-              <div class="ud-404-content">
+              <div>
                 <h2 class="ud-404-title">404 - We couldn't find that page.</h2>
                 <h5 class="ud-404-subtitle">
                   Maybe you can find what you need here?
@@ -59,7 +59,7 @@
                     <a href="index.html">Home</a>
                   </li>
                   <li>
-                    <a href="index.html/#content">Things I Talk About</a>
+                    <a href="index.html/#topics">Things I Talk About</a>
                   </li>
                   <li>
                     <a href="index.html/#socials">Socials</a>
@@ -81,7 +81,7 @@
       <div class="ud-footer-widgets">
         <div class="container">
           <div class="row">
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div>
               <div class="ud-widget">
                 <a href="index.html" class="ud-footer-logo">
                   <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
