--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Curious Redcoat</title>
 
     <!-- Primary Meta Tags -->
-<meta name="title" content="Curious Redcoat">
-<meta name="description" content="Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.">
+    <meta name="title" content="Curious Redcoat">
+    <meta name="description" content="Hello. I'm the Curious Redcoat. I (will) make videos about science, engineering, technology and history.">
 
     <!--====== Favicon Icon ======-->
     <link
@@ -34,7 +34,8 @@
                 Curious Redcoat
               </h1>
               <p class="ud-hero-desc">
-                Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.
+                Hello. I'm the Curious Redcoat. I (will) make videos about science, technology, history and anything else.<br>
+                Currently, I'm working on a series about Artemis III.
               </p>
               <ul class="ud-hero-buttons">
                 <li>
