--- a/index.html
+++ b/index.html
@@ -78,7 +78,14 @@
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="ud-single-feature ">
               <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">Engineering and Technology</h3>
+                <h3 class="ud-feature-title" style="font-size: 30px;">Engineering <h4>(mainly aerospace)</h4></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-3 col-sm-6">
+            <div class="ud-single-feature">
+              <div class="ud-feature-content">
+                <h3 class="ud-feature-title" style="font-size: 30px;">Technology</h3>
               </div>
             </div>
           </div>
@@ -86,13 +93,6 @@
             <div class="ud-single-feature">
               <div class="ud-feature-content">
                 <h3 class="ud-feature-title" style="font-size: 30px;">History</h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature">
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">Anything you and I are curious about</h3>
               </div>
             </div>
           </div>
@@ -122,7 +122,7 @@
                     <div class="ud-feature-content">
                       <a target="_blank" href="https://x.com/@CuriousRedcoat">
                         <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
-                        <h3 class="ud-feature-title">Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                        <h3 class="ud-feature-title">I post update and other topics of interest to my X (formerly Twitter) account.</h3>
                       </a>
                     </div>
                   </div>
@@ -141,12 +141,6 @@
                       </a>
                     </div>
                   </div>
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
-                        <h3 class="ud-feature-title"  style="color: #C8102E">- Instagram</h3>
-                      </a>
-                    </div>
                   </div>
                   <div class="ud-single-feature">
                     <div class="ud-feature-content">
