--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </h1>
               <p class="ud-hero-desc">
                 Hello. I'm the Curious Redcoat. I (will) make videos about science, technology, history and anything else.<br>
-                Currently, I'm working on a series about Artemis III.
+                Currently, I'm working on a series about Artemis II.
               </p>
               <ul class="ud-hero-buttons">
                 <li>
