--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
+            <div class="ud-hero-content">
               <h1 class="ud-hero-title">
                 Curious Redcoat
               </h1>
