--- a/index.html
+++ b/index.html
@@ -8,92 +8,77 @@
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Curious Redcoat">
-    <meta name="description" content="Hello. I'm the Curious Redcoat. I (will) make videos about science, engineering, technology and history.">
+    <meta name="description" content="Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.">
 
-    <!--====== Favicon Icon ======-->
+    <!--====== Favicon ======-->
     <link
       rel="shortcut icon"
       href="./assets/images/logo/favicon.ico"
       type="image/x-icon"
     />
 
-    <!-- ===== All CSS files ===== -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/ud-styles.css" />
+    <!-- ===== CSS files ===== -->
+    <link rel="stylesheet" href="assets/css/index.css" />
   </head>
 
   <body>
 
-    <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home">
+    <!-- ====== Header Start ====== -->
+    <section class="header" id="header">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-hero-content">
-              <h1 class="ud-hero-title">
-                Curious Redcoat
-              </h1>
-              <p class="ud-hero-desc">
-                Hello. I'm the Curious Redcoat. I (will) make videos about science, technology, history and anything else.<br>
-                Currently, I'm working on a series about Artemis II.
-              </p>
-              <ul class="ud-hero-buttons">
-                <li>
-                  <a href="https://youtube.com/@CuriousRedcoat" rel="nofollow noopener" target="_blank" class="ud-main-btn ud-white-btn">
-                    Visit YouTube Channel
-                  </a>
-                </li>
-                <li>
-                  <a href="#contact" rel="nofollow noopener" class="ud-main-btn ud-link-btn">
-                    Contact
-                  </a>
-                </li>
-              </ul>
-            </div>
+          <div class="ud-hero-content wow">
+            <h1 class="headerTitle">
+              Curious Redcoat
+            </h1>
+            <p class="headerDescription">
+              Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.
+            </p>
+            <ul class="headerButtons">
+              <li>
+                <a href="https://youtube.com/@CuriousRedcoat" rel="nofollow noopener" target="_blank" class="button whiteButton">
+                  Visit YouTube Channel
+                </a>
+              </li>
+              <li>
+                <a href="#contact" rel="nofollow noopener" class="button">
+                  Contact
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
+      </div>`
     </section>
     <!-- ====== Hero End ====== -->
 
     <!-- ====== Content Start ====== -->
     <section id="content" class="ud-features">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-section-title">
-              <h2>Things I Talk About</h2>
-              <p>(or will)</p>
-            </div>
-          </div>
+        <div>
+          <h2 class="title">Things I Talk About</h2>
+          <p>(or will)</p>
         </div>
+
         <div class="row">
           <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature">
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">Science</h3>
-              </div>
+            <div class="ud-feature-content">
+              <h3 class="ud-feature-title" style="font-size: 30px;">Science</h3>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature ">
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">Engineering <h4>(mainly aerospace)</h4></h3>
-              </div>
+            <div class="ud-feature-content">
+              <h3 class="ud-feature-title" style="font-size: 30px;">Engineering and Technology</h3>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature">
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">Technology</h3>
-              </div>
+            <div class="ud-feature-content">
+              <h3 class="ud-feature-title" style="font-size: 30px;">History</h3>
             </div>
           </div>
           <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-single-feature">
-              <div class="ud-feature-content">
-                <h3 class="ud-feature-title" style="font-size: 30px;">History</h3>
-              </div>
+            <div class="ud-feature-content">
+              <h3 class="ud-feature-title" style="font-size: 30px;">Anything you and I are curious about</h3>
             </div>
           </div>
         </div>
@@ -102,55 +87,74 @@
     <!-- ====== Content End ====== -->
 
     <!-- ====== Socials Start ====== -->
-    <section id="socials" class="ud-about">
+    <section id="socials" class="socials">
       <div class="container">
         <div class="ud-about-wrapper">
           <div class="ud-about-content-wrapper">
-            <div class="ud-about-content">
-              <h2>Find Me On</h2>
+            <div class="socialsContent">
+              <h2 class="title">Find Me On</h2>
               
               <div class="column">
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
-                        <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
-                        <h3 class="ud-feature-title" >All my videos are on YouTube. I might also have community posts and polls.</h3>
-                      </a>
-                    </div>
+                <div class="socialsList">
+                  <div class="ud-feature-content">
+                    <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
+                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
+                      <h3 class="ud-feature-title" >All my videos are on YouTube. I might also have community posts and polls.</h3>
+                    </a>
                   </div>
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://x.com/@CuriousRedcoat">
-                        <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
-                        <h3 class="ud-feature-title">I post update and other topics of interest to my X (formerly Twitter) account.</h3>
-                      </a>
-                    </div>
+                </div>
+                <div class="socialsList">
+                  <div class="ud-feature-content">
+                    <a target="_blank" href="https://x.com/@CuriousRedcoat">
+                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
+                      <h3 class="ud-feature-title">Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                    </a>
                   </div>
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://curiousredcoat.com">
-                        <h3 class="ud-feature-title" style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
-                      </a>
-                    </div>
+                </div>
+                <div class="socialsList">
+                  <div class="ud-feature-content">
+                    <a target="_blank" href="https://curiousredcoat.com">
+                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
+                      <h3 class="ud-feature-title" style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
+                    </a>
                   </div>
-                <h3>Inactive socials</h3>
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://tiktok.com/@curiousredcoat">
-                        <h3 class="ud-feature-title"  style="color: #C8102E"><br>- TikTok</h3>
-                      </a>
-                    </div>
-                  </div>
-                  </div>
-                  <div class="ud-single-feature">
-                    <div class="ud-feature-content">
-                      <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
-                        <h3 class="ud-feature-title" style="color: #C8102E">- Mastodon</h3>
-                      </a>
-                    </div>
-                  </div>
-                  <h3>But if you want to contact me, the best way is through <a href="#contact">email</a>.</h3>
+                </div>
               </div>
+
+              <div class="column">
+                <h2>Other socials</h2>
+                  <div class="socialsList">
+                    <a target="_blank" href="https://tiktok.com/@curiousredcoat">
+                      <h3 style="color: #C8102E"><br>TikTok (@curiousredcoat)</h3>
+                    </a>
+                  </div>
+                  <div class="socialsList">
+                    <a target="_blank" href="https://www.reddit.com/user/RedcoatEngineer/">
+                      <h3 style="color: #C8102E">Reddit (u/RedcoatEngineer)</h3>
+                    </a>
+                  </div>
+                  <div class="socialsList">
+                    <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
+                      <h3 style="color: #C8102E">Instagram (@curiousredcoat)</h3>
+                    </a>
+                  </div>
+                  <div class="socialsList">
+                    <a target="_blank" href="https://www.threads.net/@curiousredcoat">
+                      <h3 style="color: #C8102E">Threads (@curiousredcoat)</h3>
+                    </a>
+                  </div>
+                  <div class="socialsList">
+                      <a target="_blank" href="https://bsky.app/profile/curiousredcoat.bsky.social">
+                        <h3 style="color: #C8102E">Bluesky (@curiousredcoat.bsky.social)</h3>
+                      </a>
+                  </div>
+                  <div class="socialsList">
+                    <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
+                      <h3 style="color: #C8102E">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
+                    </a>
+                  </div>
+                </div>
+                <h1>But if you want to contact me, the best way is through <a href="#contact">email</a>.</h1>
             </div>
           </div>
         </div>
@@ -159,35 +163,21 @@
     <!-- ====== Socials End ====== -->
 
     <!-- ====== Contact Start ====== -->
-    <section id="contact" class="ud-contact">
+    <section id="contact" class="contact">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col-xl-8 col-lg-7">
-            <div class="ud-contact-content-wrapper">
-              <div class="ud-contact-title">
-                <div class="ud-single-feature">
-                 <h2 style="margin-bottom: 14px;">
-                   Contact
-                 </h2>
-                 <div class="ud-contact-info-wrapper">
-                   <div class="ud-single-info">
-                     <div class="ud-info-meta">
-                       <img width="52px" style="float: left; margin-right: 20px;" src="assets/images/social/Mail.png">
-                        <div>
-                        <h5>Email</h5>
-                        <h3>
-                          <a href="mailto:redcoat@curiousredcoat.com">
-                            redcoat@curiousredcoat.com
-                          </a>
-                        </h3>
-                       </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="title">
+          <div class="ud-single-feature">
+            <h2 style="margin-bottom: 22px;">
+              Contact
+            </h2>
+            <img width="52px" style="float: left; margin-right: 20px;" src="assets/images/social/Mail.png">
+          <div>
+          <h5>Email</h5>
+          <h3>
+            <a href="mailto:redcoat@curiousredcoat.com">
+              redcoat@curiousredcoat.com
+            </a>
+          </h3>
         </div>
       </div>
     </section>
@@ -195,21 +185,20 @@
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Footer Start ====== -->
-    <footer class="ud-footer">
-      <div class="ud-footer-widgets">
-        <div class="container">
-          <div class="row">
-            <div class="col-xl-3 col-lg-4 col-md-6">
-              <div class="ud-widget">
-                <a href="index.html" class="ud-footer-logo">
-                  <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
-                </a>
-                <p class="ud-widget-desc">
-                  Curiosity won't kill the Redcoat*
-                </p>
-              </div>
-            </div>
-          </footer>
+    <footer class="footer">
+      <div class="ud-widget">
+        <a href="index.html" class="footerLogo">
+          <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
+        </a>
+        <p>
+          Curiosity won't kill the Redcoat
+        </p>
+        <h7>
+            Last updated on 16 February 2024
+          </h7>
+        </div>
+      </div>
+    </footer>
     <!-- ====== Footer End ====== -->
   </body>
 </html>
