--- a/notInUse/four04.html
+++ b/notInUse/four04.html
@@ -1,13 +1,3 @@
-<!-- =========
-
-	Template Name: Play
-	Author: UIdeck
-	Author URI: https://uideck.com/
-	Support: https://uideck.com/support/
-	Version: 1.1
-
-========== -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,33 +13,31 @@
       type="image/x-icon"
     />
 
-    <!-- ===== All CSS files ===== -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/ud-styles.css" />
+    <!-- ===== CSS files ===== -->
+    <link rel="stylesheet" href="assets/css/index.css" />
   </head>
+
   <body>
 
     <!-- ====== Banner Start ====== -->
     <section class="ud-page-banner">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
             <div class="ud-banner-content">
               <h1>404 Page</h1>
             </div>
           </div>
-        </div>
       </div>
     </section>
     <!-- ====== Banner End ====== -->
 
     <!-- ====== Error 404 Start ====== -->
-    <section>
+    <section class="four04">
       <div class="container">
         <div class="row">
-          <div">
+          <div class="col-lg-12">
             <div class="ud-404-wrapper">
-              <div>
+              <div class="ud-404-content">
                 <h2 class="ud-404-title">404 - We couldn't find that page.</h2>
                 <h5 class="ud-404-subtitle">
                   Maybe you can find what you need here?
@@ -59,7 +47,7 @@
                     <a href="index.html">Home</a>
                   </li>
                   <li>
-                    <a href="index.html/#topics">Things I Talk About</a>
+                    <a href="index.html/#content">Things I Talk About</a>
                   </li>
                   <li>
                     <a href="index.html/#socials">Socials</a>
@@ -77,21 +65,14 @@
     <!-- ====== Error 404 End ====== -->
 
     <!-- ====== Footer Start ====== -->
-    <footer class="ud-footer">
-      <div class="ud-footer-widgets">
-        <div class="container">
-          <div class="row">
-            <div>
-              <div class="ud-widget">
-                <a href="index.html" class="ud-footer-logo">
-                  <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
-                </a>
-                <p class="ud-widget-desc">
-                  Curiosity won't kill the Redcoat*
-                </p>
-              </div>
-            </div>
-          </footer>
+    <footer class="footer">
+      <a href="index.html" class="footerLogo">
+        <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
+      </a>
+      <p>
+        Curiosity won't kill the Redcoat
+      </p>
+    </footer>
     <!-- ====== Footer End ====== -->
   </body>
 </html>
