--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- ===== CSS files ===== -->
     <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/ckf5nmu.css">
   </head>
 
   <body>
@@ -27,7 +28,6 @@
     <section class="header" id="header">
       <div class="container">
         <div class="row">
-          <div class="ud-hero-content wow">
             <h1 class="headerTitle">
               Curious Redcoat
             </h1>
@@ -46,41 +46,23 @@
                 </a>
               </li>
             </ul>
-          </div>
         </div>
       </div>`
     </section>
     <!-- ====== Hero End ====== -->
 
     <!-- ====== Content Start ====== -->
-    <section id="content" class="ud-features">
+    <section id="topics" class="topics">
       <div class="container">
         <div>
-          <h2 class="title">Things I Talk About</h2>
-          <p>(or will)</p>
+          <h2 class="title">Things I <i>will</i> Talk About</h2>
         </div>
 
-        <div class="row">
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-feature-content">
-              <h3 class="ud-feature-title" style="font-size: 30px;">Science</h3>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-feature-content">
-              <h3 class="ud-feature-title" style="font-size: 30px;">Engineering and Technology</h3>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-feature-content">
-              <h3 class="ud-feature-title" style="font-size: 30px;">History</h3>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-3 col-sm-6">
-            <div class="ud-feature-content">
-              <h3 class="ud-feature-title" style="font-size: 30px;">Anything you and I are curious about</h3>
-            </div>
-          </div>
+        <div class="row topicsList">
+          <h3>Science</h3>
+          <h3>Engineering and Technology</h3>
+          <h3>History</h3>
+          <h3>Anything you and I are curious about</h3>
         </div>
       </div>
     </section>
@@ -96,61 +78,55 @@
               
               <div class="column">
                 <div class="socialsList">
-                  <div class="ud-feature-content">
-                    <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
-                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
-                      <h3 class="ud-feature-title" >All my videos are on YouTube. I might also have community posts and polls.</h3>
-                    </a>
-                  </div>
+                  <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
+                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
+                    <h3 class="ud-feature-title" >All my videos are on YouTube. I might also have community posts and polls.</h3>
+                  </a>
                 </div>
                 <div class="socialsList">
-                  <div class="ud-feature-content">
-                    <a target="_blank" href="https://x.com/@CuriousRedcoat">
-                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
-                      <h3 class="ud-feature-title">Sometimes I'll post to my X (formerly Twitter) account.</h3>
-                    </a>
-                  </div>
+                  <a target="_blank" href="https://x.com/@CuriousRedcoat">
+                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
+                    <h3 class="ud-feature-title">Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                  </a>
                 </div>
                 <div class="socialsList">
-                  <div class="ud-feature-content">
-                    <a target="_blank" href="https://curiousredcoat.com">
-                      <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
-                      <h3 class="ud-feature-title" style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
-                    </a>
-                  </div>
+                  <a target="_blank" href="https://curiousredcoat.com">
+                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
+                    <h3 class="ud-feature-title" style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
+                  </a>
                 </div>
               </div>
 
               <div class="column">
                 <h2>Other socials</h2>
-                  <div class="socialsList">
+                  <div class="socialsList otherSocials">
                     <a target="_blank" href="https://tiktok.com/@curiousredcoat">
-                      <h3 style="color: #C8102E"><br>TikTok (@curiousredcoat)</h3>
+                      <h3 class="otherSocials">TikTok (@curiousredcoat)</h3>
                     </a>
                   </div>
                   <div class="socialsList">
                     <a target="_blank" href="https://www.reddit.com/user/RedcoatEngineer/">
-                      <h3 style="color: #C8102E">Reddit (u/RedcoatEngineer)</h3>
+                      <h3 class="otherSocials">Reddit (u/RedcoatEngineer)</h3>
                     </a>
                   </div>
                   <div class="socialsList">
                     <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
-                      <h3 style="color: #C8102E">Instagram (@curiousredcoat)</h3>
+                      <h3 class="otherSocials">Instagram (@curiousredcoat)</h3>
                     </a>
                   </div>
                   <div class="socialsList">
                     <a target="_blank" href="https://www.threads.net/@curiousredcoat">
-                      <h3 style="color: #C8102E">Threads (@curiousredcoat)</h3>
+                      <h3 class="otherSocials">Threads (@curiousredcoat)</h3>
                     </a>
                   </div>
                   <div class="socialsList">
                       <a target="_blank" href="https://bsky.app/profile/curiousredcoat.bsky.social">
-                        <h3 style="color: #C8102E">Bluesky (@curiousredcoat.bsky.social)</h3>
+                        <h3 class="otherSocials">Bluesky (@curiousredcoat.bsky.social)</h3>
                       </a>
                   </div>
                   <div class="socialsList">
                     <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
-                      <h3 style="color: #C8102E">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
+                      <h3 class="otherSocials">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
                     </a>
                   </div>
                 </div>
@@ -166,12 +142,11 @@
     <section id="contact" class="contact">
       <div class="container">
         <div class="title">
-          <div class="ud-single-feature">
-            <h2 style="margin-bottom: 22px;">
-              Contact
-            </h2>
-            <img width="52px" style="float: left; margin-right: 20px;" src="assets/images/social/Mail.png">
-          <div>
+          <h2 style="margin-bottom: 22px;">
+            Contact
+          </h2>
+          <img width="52px" style="float: left; margin-right: 20px;" src="assets/images/social/Mail.png">
+
           <h5>Email</h5>
           <h3>
             <a href="mailto:redcoat@curiousredcoat.com">
@@ -194,9 +169,8 @@
           Curiosity won't kill the Redcoat
         </p>
         <h7>
-            Last updated on 16 February 2024
-          </h7>
-        </div>
+          Last updated on 16 February 2024
+        </h7>
       </div>
     </footer>
     <!-- ====== Footer End ====== -->
