--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <section class="header" id="header">
       <div class="container">
         <div class="row">
-            <h1 class="headerTitle">
+            <h2 class="headerTitle" style="text-align: center;">
               Curious Redcoat
-            </h1>
+            </h2>
             <p class="headerDescription">
               Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.
             </p>
@@ -47,91 +47,110 @@
               </li>
             </ul>
         </div>
-      </div>`
+      </div>
     </section>
-    <!-- ====== Hero End ====== -->
+    <!-- ====== Header End ====== -->
 
-    <!-- ====== Content Start ====== -->
-    <section id="topics" class="topics">
+    <!-- ====== Current Projects Start ====== -->
+    <section id="projects" class="topics">
       <div class="container">
+        <h1 style="font-size: 58px;">Projects</h1>
         <div>
-          <h2 class="title">Things I <i>will</i> Talk About</h2>
-        </div>
-
-        <div class="row topicsList">
-          <h3>Science</h3>
-          <h3>Engineering and Technology</h3>
-          <h3>History</h3>
-          <h3>Anything you and I are curious about</h3>
+          <h1>Ongoing Projects</h1>
+          <div class="ongoing">
+            <li>
+              The Inginuity of Artemis, Compared
+            </li>
+          </div>
         </div>
       </div>
     </section>
-    <!-- ====== Content End ====== -->
+    <!-- ====== Current Projects End ====== -->
+
+
+
+    <!-- ====== Topics Start ====== -->
+    <section id="topics" class="topics">
+      <div class="container">
+        <div>
+          <h1>Things I <i style="font-size: 30px;">mainly</i> Talk About</h1>
+          <h2 style="margin-top: -28px">or will</h2>
+        </div>
+
+        <div class="topicsList">
+          <div class="topicSubject">
+            <h4 style="font-size: 24px; margin-bottom: -10px"><i>Aerospace</i></h4>
+            <h3>Engineering</h3>
+          </div>
+          <h3 class="topicSubject">History</h3>
+        </div>
+      </div>
+    </section>
+    <!-- ====== Topics End ====== -->
 
     <!-- ====== Socials Start ====== -->
     <section id="socials" class="socials">
       <div class="container">
-        <div class="ud-about-wrapper">
-          <div class="ud-about-content-wrapper">
-            <div class="socialsContent">
-              <h2 class="title">Find Me On</h2>
-              
-              <div class="column">
-                <div class="socialsList">
-                  <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
-                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
-                    <h3 class="ud-feature-title" >All my videos are on YouTube. I might also have community posts and polls.</h3>
+        <div class="socialsContent">
+          <h1>Find Me On</h1>          
+            <div class="column">
+              <div class="socialsAlpha">
+                <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
+                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
+                  <h3>All my videos are on YouTube. I might also have community posts and polls.</h3>
+                </a>
+              </div>
+              <div class="socialsAlpha">
+                <a target="_blank" href="https://x.com/@CuriousRedcoat">
+                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
+                  <h3>Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                </a>
+              </div>
+              <div class="socialsAlpha">
+                <a target="_blank" href="https://curiousredcoat.com">
+                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
+                  <h3 style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
+                </a>
+              </div>
+            </div>
+
+            <div class="column">
+              <h2 style="font-size: 28px;">Other socials</h2>
+
+              <div>
+                <div>
+                  <a target="_blank" href="https://tiktok.com/@curiousredcoat">
+                    <h3 class="socialsBeta">TikTok (@curiousredcoat)</h3>
                   </a>
                 </div>
-                <div class="socialsList">
-                  <a target="_blank" href="https://x.com/@CuriousRedcoat">
-                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
-                    <h3 class="ud-feature-title">Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                <div>
+                  <a target="_blank" href="https://www.reddit.com/user/RedcoatEngineer/">                      
+                    <h3 class="socialsBeta">Reddit (u/RedcoatEngineer)</h3>
                   </a>
                 </div>
-                <div class="socialsList">
-                  <a target="_blank" href="https://curiousredcoat.com">
-                    <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
-                    <h3 class="ud-feature-title" style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
+                <div>
+                  <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
+                    <h3 class="socialsBeta">Instagram (@curiousredcoat)</h3>
+                  </a>
+                </div>
+                <div>
+                  <a target="_blank" href="https://www.threads.net/@curiousredcoat">
+                    <h3 class="socialsBeta">Threads (@curiousredcoat)</h3>
+                  </a>
+                </div>
+                <div>
+                  <a target="_blank" href="https://bsky.app/profile/curiousredcoat.bsky.social">
+                    <h3 class="socialsBeta">Bluesky (@curiousredcoat.bsky.social)</h3>
+                  </a>
+                </div>
+                <div>
+                  <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
+                    <h3 class="socialsBeta">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
                   </a>
                 </div>
               </div>
-
-              <div class="column">
-                <h2>Other socials</h2>
-                  <div class="socialsList otherSocials">
-                    <a target="_blank" href="https://tiktok.com/@curiousredcoat">
-                      <h3 class="otherSocials">TikTok (@curiousredcoat)</h3>
-                    </a>
-                  </div>
-                  <div class="socialsList">
-                    <a target="_blank" href="https://www.reddit.com/user/RedcoatEngineer/">
-                      <h3 class="otherSocials">Reddit (u/RedcoatEngineer)</h3>
-                    </a>
-                  </div>
-                  <div class="socialsList">
-                    <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
-                      <h3 class="otherSocials">Instagram (@curiousredcoat)</h3>
-                    </a>
-                  </div>
-                  <div class="socialsList">
-                    <a target="_blank" href="https://www.threads.net/@curiousredcoat">
-                      <h3 class="otherSocials">Threads (@curiousredcoat)</h3>
-                    </a>
-                  </div>
-                  <div class="socialsList">
-                      <a target="_blank" href="https://bsky.app/profile/curiousredcoat.bsky.social">
-                        <h3 class="otherSocials">Bluesky (@curiousredcoat.bsky.social)</h3>
-                      </a>
-                  </div>
-                  <div class="socialsList">
-                    <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
-                      <h3 class="otherSocials">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
-                    </a>
-                  </div>
-                </div>
-                <h1>But if you want to contact me, the best way is through <a href="#contact">email</a>.</h1>
             </div>
+            <h2>But if you want to contact me, the best way is through <a href="#contact">email</a>.</h2>
           </div>
         </div>
       </div>
@@ -139,37 +158,36 @@
     <!-- ====== Socials End ====== -->
 
     <!-- ====== Contact Start ====== -->
-    <section id="contact" class="contact">
-      <div class="container">
-        <div class="title">
-          <h2 style="margin-bottom: 22px;">
-            Contact
-          </h2>
-          <img width="52px" style="float: left; margin-right: 20px;" src="assets/images/social/Mail.png">
-
-          <h5>Email</h5>
-          <h3>
-            <a href="mailto:redcoat@curiousredcoat.com">
-              redcoat@curiousredcoat.com
-            </a>
-          </h3>
+    <section id="contact"  class="contact">
+        <div>
+          <h1>Contact</h1>
+          <div>
+            <img width="46px" style="float: left; margin-right: 10px; margin-top: 1px;" src="assets/images/social/Mail.png">
+            <div>
+              <h3>Email</h3>
+              <h2>
+                <a href="mailto:redcoat@curiousredcoat.com">
+                  redcoat@curiousredcoat.com
+                </a>
+              </h2>
+            </div>
         </div>
       </div>
     </section>
-    
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Footer Start ====== -->
     <footer class="footer">
-      <div class="ud-widget">
+      <div>
         <a href="index.html" class="footerLogo">
           <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
         </a>
         <p>
           Curiosity won't kill the Redcoat
         </p>
+        <br>
         <h7>
-          Last updated on 16 February 2024
+          Last updated on 17 February 2024
         </h7>
       </div>
     </footer>
