--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- ===== CSS files ===== -->
-    <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="stylesheet" href="assets/index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ckf5nmu.css">
   </head>
 
