--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!--====== Favicon ======-->
     <link
       rel="shortcut icon"
-      href="./assets/images/logo/favicon.ico"
+      href="./images/logo/favicon.ico"
       type="image/x-icon"
     />
 
     <!-- ===== CSS files ===== -->
-    <link rel="stylesheet" href="assets/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ckf5nmu.css">
   </head>
 
@@ -28,9 +28,10 @@
     <section class="header" id="header">
       <div class="container">
         <div class="row">
-            <h2 class="headerTitle" style="text-align: center;">
+            <h2 class="headerTitle">
               Curious Redcoat
             </h2>
+            <h2 style="text-align: center; color: var(--white);">Per Aspera Ad Astra</h2>
             <p class="headerDescription">
               Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.
             </p>
@@ -54,12 +55,15 @@
     <!-- ====== Current Projects Start ====== -->
     <section id="projects" class="topics">
       <div class="container">
-        <h1 style="font-size: 58px;">Projects</h1>
+        <h1>Projects</h1>
         <div>
           <h1>Ongoing Projects</h1>
           <div class="ongoing">
             <li>
-              The Inginuity of Artemis, Compared
+              <img src="images/projects/ArtemisIngenuity.png" 
+              alt="A conceptual YouTube thumbnail with an image of the SLS in daylight with the text 'Artemis's SLS' in the top-left corner." 
+              width="480px" style="float: top; border-radius: 20px; border: 6px solid var(--heading-color);">
+              <h3>The Ingenuity of Artemis</h3>
             </li>
           </div>
         </div>
@@ -67,22 +71,22 @@
     </section>
     <!-- ====== Current Projects End ====== -->
 
-
-
     <!-- ====== Topics Start ====== -->
     <section id="topics" class="topics">
       <div class="container">
         <div>
-          <h1>Things I <i style="font-size: 30px;">mainly</i> Talk About</h1>
-          <h2 style="margin-top: -28px">or will</h2>
+          <h1>Things I <i style="font-size: 32px;">mainly</i> Talk About</h1>
+          <h2 style="margin-top: -2vw;">or will</h2>
         </div>
 
         <div class="topicsList">
+          <h2 class="topicSubject">Science</h2>
+          <h2 class="topicSubject">Technology</h2>
           <div class="topicSubject">
-            <h4 style="font-size: 24px; margin-bottom: -10px"><i>Aerospace</i></h4>
-            <h3>Engineering</h3>
+            <h3 style="font-size: 32px; margin-bottom: -1vw"><i>Aerospace</i></h3>
+            <h2>Engineering</h2>
           </div>
-          <h3 class="topicSubject">History</h3>
+          <h2 class="topicSubject">History</h2>
         </div>
       </div>
     </section>
@@ -96,61 +100,68 @@
             <div class="column">
               <div class="socialsAlpha">
                 <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
-                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/YouTube.png">
-                  <h3>All my videos are on YouTube. I might also have community posts and polls.</h3>
+                  <img src="./images/social/YouTube.png" alt="The YouTube logo" style="float: left; margin: 12px 15px 15px 0px;" width="32px">
                 </a>
+                <h2>All my videos are on 
+                  <a target="_blank" href="https://youtube.com/@CuriousRedcoat">
+                    YouTube
+                  </a>
+                  . I might also have community posts and polls.
+                </h2>
               </div>
               <div class="socialsAlpha">
                 <a target="_blank" href="https://x.com/@CuriousRedcoat">
-                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px" src="./assets/images/social/X.png">
-                  <h3>Sometimes I'll post to my X (formerly Twitter) account.</h3>
+                  <img src="./images/social/X.png" alt="The X (formerly Twitter) logo" style="float: left; margin: 12px 15px 15px 0px;" width="32px">
                 </a>
+                <h2>Sometimes I'll post to my 
+                  <a target="_blank" href="https://x.com/@CuriousRedcoat">
+                    X (formerly Twitter)
+                  </a>
+                   account.
+                </h2>
               </div>
               <div class="socialsAlpha">
-                <a target="_blank" href="https://curiousredcoat.com">
-                  <img style="float: left; margin: 12px 15px 15px 0px;" width="32px">
-                  <h3 style="margin-left: 46px">CuriousRedcoat.com (This website)</h3>
-                </a>
+                <h2 style="margin-left: 46px">CuriousRedcoat.com (This website)</h2>
               </div>
             </div>
 
             <div class="column">
-              <h2 style="font-size: 28px;">Other socials</h2>
+              <h2 style="font-size: 36px;">Other socials</h2>
 
               <div>
                 <div>
                   <a target="_blank" href="https://tiktok.com/@curiousredcoat">
-                    <h3 class="socialsBeta">TikTok (@curiousredcoat)</h3>
+                    <h2 class="socialsBeta">TikTok (@curiousredcoat)</h2>
                   </a>
                 </div>
                 <div>
                   <a target="_blank" href="https://www.reddit.com/user/RedcoatEngineer/">                      
-                    <h3 class="socialsBeta">Reddit (u/RedcoatEngineer)</h3>
+                    <h2 class="socialsBeta">Reddit (u/RedcoatEngineer)</h2>
                   </a>
                 </div>
                 <div>
                   <a target="_blank" href="https://www.instagram.com/curiousredcoat/">
-                    <h3 class="socialsBeta">Instagram (@curiousredcoat)</h3>
+                    <h2 class="socialsBeta">Instagram (@curiousredcoat)</h2>
                   </a>
                 </div>
                 <div>
                   <a target="_blank" href="https://www.threads.net/@curiousredcoat">
-                    <h3 class="socialsBeta">Threads (@curiousredcoat)</h3>
+                    <h2 class="socialsBeta">Threads (@curiousredcoat)</h2>
                   </a>
                 </div>
                 <div>
                   <a target="_blank" href="https://bsky.app/profile/curiousredcoat.bsky.social">
-                    <h3 class="socialsBeta">Bluesky (@curiousredcoat.bsky.social)</h3>
+                    <h2 class="socialsBeta">Bluesky (@curiousredcoat.bsky.social)</h2>
                   </a>
                 </div>
                 <div>
                   <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
-                    <h3 class="socialsBeta">Mastodon (@CuriousRedcoat@mastodon.social)</h3>
+                    <h2 class="socialsBeta">Mastodon (@CuriousRedcoat@mastodon.social)</h2>
                   </a>
                 </div>
               </div>
             </div>
-            <h2>But if you want to contact me, the best way is through <a href="#contact">email</a>.</h2>
+            <h2 style="font-size: 44px;">But if you want to contact me, the best way is through <a href="#contact">email</a>.</h2>
           </div>
         </div>
       </div>
@@ -162,10 +173,10 @@
         <div>
           <h1>Contact</h1>
           <div>
-            <img width="46px" style="float: left; margin-right: 10px; margin-top: 1px;" src="assets/images/social/Mail.png">
+            <img width="56px" style="float: left; margin-right: 10px; margin-top: 6px;" src="images/social/Mail.svg">
             <div>
-              <h3>Email</h3>
-              <h2>
+              <h2>Email</h2>
+              <h2 style="font-size: 32px;">
                 <a href="mailto:redcoat@curiousredcoat.com">
                   redcoat@curiousredcoat.com
                 </a>
@@ -180,7 +191,7 @@
     <footer class="footer">
       <div>
         <a href="index.html" class="footerLogo">
-          <img style="border-radius: 32px" width="82px" src="./assets/images/logo/Wilhelm.png" />
+          <img style="border-radius: 32px" width="82px" src="./images/logo/Wilhelm.png" />
         </a>
         <p>
           Curiosity won't kill the Redcoat
