--- a/index.html
+++ b/index.html
@@ -173,14 +173,13 @@
         <div>
           <h1>Contact</h1>
           <div>
-            <img width="56px" style="float: left; margin-right: 10px; margin-top: 6px;" src="images/social/Mail.svg">
-            <div>
+            <img class="mailIcon" width="64px" style="float: left; margin-right: 10px;" src="images/social/Mail.svg">
               <h2>Email</h2>
-              <h2 style="font-size: 32px;">
+              <h3 style="font-size: 32px;">
                 <a href="mailto:redcoat@curiousredcoat.com">
                   redcoat@curiousredcoat.com
                 </a>
-              </h2>
+              </h3>
             </div>
         </div>
       </div>
