--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div>
                   <a target="_blank" href="https://mastodon.social/@CuriousRedcoat">
-                    <h2 class="socialsBeta">Mastodon (@CuriousRedcoat@mastodon.social)</h2>
+                    <h2 class="socialsBeta mastodon">Mastodon (@CuriousRedcoat@mastodon.social)</h2>
                   </a>
                 </div>
               </div>
@@ -175,7 +175,7 @@
           <div>
             <img class="mailIcon" width="64px" style="float: left; margin-right: 10px;" src="images/social/Mail.svg">
               <h2>Email</h2>
-              <h3 style="font-size: 32px;">
+              <h3 class="long" style="font-size: 32px;">
                 <a href="mailto:redcoat@curiousredcoat.com">
                   redcoat@curiousredcoat.com
                 </a>
