--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Curious Redcoat">
-    <meta name="description" content="Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.">
+    <meta name="description" content="Hello. I'm the Curious Redcoat. I (will) mainly make videos about science, technology, aerospace engineering and history.">
 
     <!--====== Favicon ======-->
     <link
@@ -17,7 +17,7 @@
       type="image/x-icon"
     />
 
-    <!-- ===== CSS files ===== -->
+    <!-- ===== CSS files and font(s) ===== -->
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ckf5nmu.css">
   </head>
@@ -33,7 +33,7 @@
             </h2>
             <h2 style="text-align: center; color: var(--white);">Per Aspera Ad Astra</h2>
             <p class="headerDescription">
-              Hello. I'm the Curious Redcoat. I make videos about science, technology, history and anything else.
+              Hello. I'm the Curious Redcoat. I <i style="color: var(--white)">(will) mainly</i> make videos about science, technology, aerospace engineering and history
             </p>
             <ul class="headerButtons">
               <li>
@@ -161,7 +161,7 @@
                 </div>
               </div>
             </div>
-            <h2 style="font-size: 38px;">But if you want to contact me, the best way is through <a href="#contact">email</a>.</h2>
+            <h2 style="font-size: 32px;">But if you want to contact me, the best way is through <a href="#contact">email</a>.</h2>
           </div>
         </div>
       </div>
@@ -169,17 +169,17 @@
     <!-- ====== Socials End ====== -->
 
     <!-- ====== Contact Start ====== -->
-    <section id="contact"  class="contact">
+    <section id="contact" class="contact">
         <div>
           <h1>Contact</h1>
           <div>
             <img class="mailIcon" width="64px" style="float: left; margin-right: 10px;" src="images/social/Mail.svg">
               <h2>Email</h2>
-              <h3 class="long" style="font-size: 32px;">
+              <h2 class="long">
                 <a href="mailto:redcoat@curiousredcoat.com">
                   redcoat@curiousredcoat.com
                 </a>
-              </h3>
+              </h2>
             </div>
         </div>
       </div>
@@ -197,7 +197,7 @@
         </p>
         <br>
         <h7>
-          Last updated on 17 February 2024
+          Last updated on 28 February 2024
         </h7>
       </div>
     </footer>
