--- a/relaylove-main/relay.html
+++ b/relaylove-main/relay.html
@@ -13,7 +13,7 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="A Temporary Tor Snowflake Proxy"> <!-- Keep the description to around 20 words or 150 characters so it displays fully on Google search results. -->
 
-	<title>Relay Love - A Temporary Tor Snowflake Proxy</title>
+	<title>Curious Relay - A Temporary Tor Snowflake Proxy</title>
 
 	<link rel="icon" type="image/x-icon" href="design-system/images/favicon/favicon.ico">
 	<link rel="stylesheet" href="design-system/css/style.css">
@@ -26,13 +26,13 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 
 <body>
 	<div class="banner">
-		<p>❤️ Is this resource helpful? <a href="https://opencollective.com/scidsg" target="_blank" rel="noopener noreferrer">Support our work</a>!</p>
+		<p>❤️ Is this resource helpful? <a href="https://opencollective.com/scidsg" target="_blank" rel="noopener noreferrer">Support Science & Design's work</a>!</p>
 	</div>
 	<header>
 		<div class="wrapper">
 			<div class="logo">
 				<div class="logoMark"></div>
-				<h1>❄️ Relay Love</h1>
+				<h1>Curious Relay</h1>
 			</div>
 			<nav>
 				<ul>
@@ -51,7 +51,7 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 						<h2>Temporarily Share Your Bandwidth</h2>
 						<p>Help people safely access the internet using <a rel="me noopener noreferrer" target="_blank"  href="https://snowflake.torproject.org/">Snowflake</a>. To share your connection, enable the toggle and keep this tab open. Avoid sharing from censored locations.</p>
 						<p>Or, add it as a browser extension on <a rel="me noopener noreferrer" target="_blank"  href="https://addons.mozilla.org/en-US/firefox/addon/torproject-snowflake/">Firefox</a> or <a rel="me noopener noreferrer" target="_blank"  href="https://chrome.google.com/webstore/detail/snowflake/mafpmfcccpbjnhfhjnllmmalhifmlcie">Chrome</a>!</p>
-						<p class="meta">✊ An anti-censorship project by <a rel="me noopener noreferrer" target="_blank"  href="https://scidsg.org">Science &amp; Design</a></p>
+						<p class="meta">✊ An anti-censorship project by <a rel="me noopener noreferrer" target="_blank"  href="https://scidsg.org">Science &amp; Design</a>, and hosted here by Curious Redcoat</p>
 					</div>
 					<iframe src="https://snowflake.torproject.org/embed.html" width="320" height="240" frameborder="0" scrolling="no"></iframe>
 				</div>
