--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!-- ===== CSS files and font(s) ===== -->
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/ckf5nmu.css">
   </head>
 
