--- a/relay.html
+++ b/relay.html
@@ -15,7 +15,7 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 
 	<title>Curious Relay - A Temporary Tor Snowflake Proxy</title>
 
-	<link rel="icon" type="image/x-icon" href="design-system/images/favicon/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./images/logo/favicon.ico">
 	<link rel="stylesheet" href="design-system/css/style.css">
 	<link rel="stylesheet" href="css/style.css">
 
