--- a/curiousrelay.html
+++ b/curiousrelay.html
@@ -15,9 +15,9 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 
 	<title>Curious Relay - A Temporary Tor Snowflake Proxy</title>
 
-	<link rel="icon" type="image/x-icon" href="./images/logo/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="design-system/images/favicon/favicon.ico">
 	<link rel="stylesheet" href="design-system/css/style.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/relay.css">
 
 	<script src="design-system/js/jquery-min.js"></script>
 	<script src="design-system/js/design-system.js"></script>
@@ -25,20 +25,11 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 </head>
 
 <body>
-	<div class="banner">
-		<p>❤️ Is this resource helpful? <a href="https://opencollective.com/scidsg" target="_blank" rel="noopener noreferrer">Support Science & Design's work</a>!</p>
-	</div>
 	<header>
 		<div class="wrapper">
 			<div class="logo">
-				<div class="logoMark"></div>
 				<h1>Curious Relay</h1>
 			</div>
-			<nav>
-				<ul>
-					<li><a role="button" class="btn primaryBtn" href="https://github.com/glenn-sorrentino/relay.love" target="_blank" rel="noopener noreferrer">Clone This Project</a></li>
-				</ul>
-			</nav>
 		</div>
 	</header>
 
@@ -49,9 +40,10 @@ W3C/WHATWG Standards, etc - please consider contributing 🙏 -->
 				<div class="group">
 					<div class="description">
 						<h2>Temporarily Share Your Bandwidth</h2>
-						<p>Help people safely access the internet using <a rel="me noopener noreferrer" target="_blank"  href="https://snowflake.torproject.org/">Snowflake</a>. To share your connection, enable the toggle and keep this tab open. Avoid sharing from censored locations.</p>
+						<p>Help people safely access the internet using <a rel="me noopener noreferrer" target="_blank"  href="https://snowflake.torproject.org/">Snowflake</a>. 
+							To share your connection, enable the toggle and keep this tab open. </p>
+						<p>Avoid sharing from censored locations.</p>
 						<p>Or, add it as a browser extension on <a rel="me noopener noreferrer" target="_blank"  href="https://addons.mozilla.org/en-US/firefox/addon/torproject-snowflake/">Firefox</a> or <a rel="me noopener noreferrer" target="_blank"  href="https://chrome.google.com/webstore/detail/snowflake/mafpmfcccpbjnhfhjnllmmalhifmlcie">Chrome</a>!</p>
-						<p class="meta">✊ An anti-censorship project by <a rel="me noopener noreferrer" target="_blank"  href="https://scidsg.org">Science &amp; Design</a>, and hosted here by Curious Redcoat</p>
 					</div>
 					<iframe src="https://snowflake.torproject.org/embed.html" width="320" height="240" frameborder="0" scrolling="no"></iframe>
 				</div>
